horizontal scroll fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,7 @@
 html, body, #root, .parentLayout {
   margin: 0;
   padding: 0;
-  width: 100vw;
+  max-width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
